--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,9 @@ section {
     display: flex;
     gap: 30px;
 }
+.team-wrapper {
+    padding-top: 30px;
+}
 .team-items {
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -240,7 +243,6 @@ section {
     background: var(--white-main-color);
 }
 .team-subheader {
-    padding-top: 30px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
@@ -248,7 +250,7 @@ section {
     color: var(--main-text-color);
 }
 .team-txt {
-    padding-top: 10px;
+    margin-top: 10px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.2;
@@ -352,13 +354,15 @@ section {
     text-align: center;
     width: 370px;
 }
+.cards-wrapper {
+    padding-top: 20px;
+}
 .cards-img {
     display: block;
     width: 100%;
     height: auto;
 }
 .cards-header {
-    padding-top: 20px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -366,7 +370,7 @@ section {
     color: var(--main-text-color)
 }
 .cards-txt {
-    padding-top: 4px;
+    margin-top: 4px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.8;
