--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ p {
 body {
   font-family: Roboto, sans-serif;
   font-style: normal;
+  margin: 0;
 
 }
 
@@ -51,6 +52,10 @@ section {
   --white-main-color: #ffffff;
   --bg-team-color: #F5F4FA;
   --hero-bg-color: #C4C4C4;
+  --backdrop-bg-color: rgba(0, 0, 0, 0.2);
+  --hover-btn-color: #188CE8;
+  --icon-colr: #afb1b8;
+  --footer-bg-svg: rgba(255, 255, 255, 0.1);
 }
 
 
@@ -109,12 +114,10 @@ section {
   gap: 50px;
 }
 
-.nav-items {
+.nav-link {
+  position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
-}
-
-.nav-link {
   text-decoration: none;
   margin: 0;
   font-weight: 500;
@@ -122,6 +125,16 @@ section {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+}
+.active::before {
+  content:'';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background: var(--main-color);
+  border-radius: 2px;
 }
 
 .nav-link:focus,
@@ -163,11 +176,16 @@ section {
 }
 
 /* HERO */
-.section-hero {
+.section-hero{
+  max-width: 1600px;
+  margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
   background: url(../img/mainBg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   background-color: var(--hero-bg-color);
 }
 
@@ -185,6 +203,9 @@ section {
 }
 
 .hero-btn:focus,
+.hero-btn:hover {
+  background: var(--hover-btn-color);
+}
 .hero-btn {
   width: 216px;
   height: 50px;
@@ -263,6 +284,12 @@ section {
   padding: 30px 32px 30px 32px;
 }
 
+.team-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .team-items {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -289,11 +316,36 @@ section {
   color: var(--sub-text-color);
 }
 
-.team-img {
-  display: block;
-  width: 100%;
-  height: auto;
+.team-icon-list {
+  margin-top: 16px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
+.icon-linck {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--icon-colr);
+  /* background-color: var(--white-main-color); */
+}
+.icon-linck:focus,
+.icon-linck:hover {
+  background-color: var(--main-color);
+  color: var(--white-main-color);
+}
+
+.icon-svg {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
+}
+
+
 
 /* footer */
 .footer {
@@ -301,10 +353,13 @@ section {
   padding-bottom: 60px;
   background: var(--bg-main-color);
 }
+.footer-container {
+  display: flex;
+  align-items: center;
+}
 
 .logo-footer {
   display: inline-block;
-  margin-bottom: 20px;
   font-family: Raleway, sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -321,6 +376,7 @@ section {
 }
 
 .footer-addres-lower {
+  margin-top: 20px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -334,6 +390,8 @@ section {
 }
 
 .footer-addres-link {
+  margin-top: 9px;
+  display: block;
   font-style: normal;
   text-decoration: none;
   font-weight: 400;
@@ -347,6 +405,85 @@ section {
 .footer-addres-link:hover {
   color: var(--main-color);
 }
+
+.social-wrapper {
+  margin-left: 70px;
+}
+.social-header {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-main-color);
+}
+.icon-list {
+  display: flex;
+}
+.icon-list {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.icon-linck {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--icon-colr);
+    background-color: var(--footer-bg-svg);
+}
+
+.form-wrapper {
+  margin-left: auto;
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+}
+.label-form {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-main-color);
+}
+.input-form {
+  margin-top: 20px;
+  padding: 15px 0 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--bg-main-color);
+  width: 358px;
+}
+.input-form::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-btn {
+  width: 200px;
+  height: 50px;
+  background: var(--main-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--white-main-color);
+}
+
 
 
 /* PORTFOLIO */
@@ -422,4 +559,110 @@ section {
   line-height: 1.8;
   letter-spacing: 0.03em;
   color: var(--sub-text-color);
+}
+
+/* MODAL */
+.backdrop {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--backdrop-bg-color);
+}
+.modal-wrapper {
+  padding: 40px;
+  width: 528px;
+  border-radius: 4px;
+  background: var(--white-main-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+}
+.modal-header {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.1;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+
+.block {
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  /* position: absolute;
+  transform: translateY(-100%); */
+  margin-bottom: 4px;
+  color: var(--sub-text-color);
+}
+.input {
+  margin-bottom: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+/* .input:focus+ .label {
+  color:var(--main-color);
+}  */
+
+
+.textarea {
+  margin-bottom: 20px;
+  resize: none;
+  padding: 12px 16px 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+
+.modal-checkbox {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.label-checkbox {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--sub-text-color);
+}
+.checkbox-span {
+  text-decoration-line: underline;
+  color: var(--main-color);
+}
+
+.modal-btn:focus,
+.modal-btn:hover {
+  background: var(--hover-btn-color);
+}
+.modal-btn {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: 50px;  
+  background: var(--main-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  color: var(--white-main-color);
 }
