--- a/css/style.css
+++ b/css/style.css
@@ -225,10 +225,38 @@ section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
+.benefits-items {
+  width: 270px;
+}
 .benefits-list {
   display: flex;
   gap: 30px;
+} 
+.svg_wrapper {
+  padding: 25px 100px;
+  width: 100%;
+  background: var(--bg-team-color);
+}
+.benefits-svg {
+  width: 70px;
+  height: 70px;
+}
+.benefits-header {
+  margin-top: 30px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
+.benfits-txt {
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--sub-text-color);
 }
 
 /* activity */
@@ -331,7 +359,7 @@ section {
   height: 44px;
   border-radius: 50%;
   color: var(--icon-colr);
-  /* background-color: var(--white-main-color); */
+  
 }
 .icon-linck:focus,
 .icon-linck:hover {
@@ -342,6 +370,46 @@ section {
 .icon-svg {
   width: 20px;
   height: 20px;
+  fill: currentColor;
+}
+
+
+/* CLIENTS */
+.sectio-clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.clients-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+.clients-list {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.clients-link{
+  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 1px solid #AFB1B8;
+  border-radius: 4px;
+  color: var(--icon-colr);
+}
+.clients-link:focus,
+.clients-link:hover {
+  outline: 1px solid #2196F3;
+  color: var(--main-color);
+}
+.clients-svg {
+  width: 105px;
+  height: 60px;
   fill: currentColor;
 }
 
