--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ section {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
 }
 .active::before {
   content:'';
@@ -183,6 +185,8 @@ section {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--sub-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
 }
 
 .addres-link-upper:focus,
@@ -394,7 +398,6 @@ section {
   height: 44px;
   border-radius: 50%;
   color: var(--icon-colr);
-  
 }
 .icon-linck:focus,
 .icon-linck:hover {
@@ -436,6 +439,8 @@ section {
   outline: 1px solid #AFB1B8;
   border-radius: 4px;
   color: var(--icon-colr);
+  transition-property: color background-color;
+  transition-duration: 250ms;
 }
 .clients-link:focus,
 .clients-link:hover {
@@ -502,6 +507,8 @@ section {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--footer-addres-color);
+  transition-property: color;
+  transition-duration: 250ms;
 }
 
 .footer-addres-link:focus,
@@ -539,6 +546,9 @@ section {
     border-radius: 50%;
     color: var(--icon-colr);
     background-color: var(--footer-bg-svg);
+
+    transition-property: color background-color;
+    transition-duration: 250ms;
 }
 
 .form-wrapper {
@@ -635,8 +645,65 @@ section {
 }
 
 .cards-items {
-  border: 1px solid #EEEEEE;
+  outline: 1px solid #EEEEEE;
   width: 370px;
+}
+
+
+.cards-link {
+  text-decoration: none;
+}
+.background-wrapper {
+  position: relative;
+}
+
+.cards-transparent-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: var(--white-main-color);
+}
+.background-wrapper{
+  position: relative;
+}
+
+.background-wrapper::before {
+  display: inline-block;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 150, 243, 0.9);
+    transform: scaleY(0);
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform-origin: bottom;
+}
+.cards-items:hover .background-wrapper::before {
+  transform: scaleY(1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.cards-items:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.cards-transparent-box {
+  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+}
+.cards-items:hover .cards-transparent-box {
+  opacity: 1;
 }
 
 .cards-wrapper {
